scripts/nullaway/original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8.txt
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/queue/QueueSystem.java:77: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/queue/QueueSystem.java:81: error: [NullAway] @NonNull field QueueSystem$QueueEntry.customer not initialized
        public Customer customer;
                        ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/queue/QueueSystem.java:82: error: [NullAway] @NonNull field QueueSystem$QueueEntry.afterService not initialized
        public Event afterService;
                     ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/queue/Server.java:16: error: [NullAway] initializer method does not guarantee @NonNull field qs (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Server(String name) {
           ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:28: error: [NullAway] @NonNull static field queuesInfoMap not initialized
    private static HashMap<String, ArrayList<QueueInfo>> queuesInfoMap;
                                                         ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:29: error: [NullAway] @NonNull static field systemInfoMap not initialized
    private static ArrayList<QueueInfo> systemInfoMap;
                                        ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:30: error: [NullAway] @NonNull static field delaysInfoMap not initialized
    private static HashMap<String, ArrayList<Delay>> delaysInfoMap;
                                                     ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:31: error: [NullAway] @NonNull static field custDelay not initialized
    private static HashMap<Customer, Integer> custDelay;
                                              ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:32: error: [NullAway] @NonNull static field tempDelays not initialized
    private static HashMap<Customer, Delay> tempDelays;
                                            ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:35: error: [NullAway] @NonNull static field timeAvgNumInQueue not initialized
    private static HashMap<String, Double> timeAvgNumInQueue;
                                           ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:36: error: [NullAway] @NonNull static field maxNumInQueue not initialized
    private static HashMap<String, Integer> maxNumInQueue;
                                            ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:37: error: [NullAway] @NonNull static field avgDelayInQueue not initialized
    private static HashMap<String, Double> avgDelayInQueue;
                                           ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:38: error: [NullAway] @NonNull static field maxDelayInQueue not initialized
    private static HashMap<String, Integer> maxDelayInQueue;
                                            ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:142: error: [NullAway] dereferenced expression temp is @Nullable
        QueueInfo info = temp.get(temp.size() - 1);
                             ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:142: error: [NullAway] dereferenced expression temp is @Nullable
        QueueInfo info = temp.get(temp.size() - 1);
                                      ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:183: error: [NullAway] dereferenced expression list is @Nullable
        Iterator<QueueInfo> it = list.iterator();
                                     ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:209: error: [NullAway] dereferenced expression list is @Nullable
        Iterator<QueueInfo> it = list.iterator();
                                     ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:265: error: [NullAway] dereferenced expression d is @Nullable
        d.to = SimulationClk.clock;
         ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:267: error: [NullAway] dereferenced expression list is @Nullable
        list.add(d);
            ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:281: error: [NullAway] dereferenced expression list is @Nullable
        Iterator<Delay> it = list.iterator();
                                 ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:303: error: [NullAway] dereferenced expression list is @Nullable
        Iterator<Delay> it = list.iterator();
                                 ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:316: error: [NullAway] unboxing of a @Nullable value
        return maxNumInQueue.get(qType);
                                ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:325: error: [NullAway] unboxing of a @Nullable value
            sum += custDelay.get(next);
                                ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:338: error: [NullAway] unboxing of a @Nullable value
                sum += custDelay.get(next);
                                    ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:351: error: [NullAway] unboxing of a @Nullable value
                int delay = custDelay.get(next);
                                         ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:360: error: [NullAway] @NonNull field Statistics$Delay.c not initialized
        public Customer c;
                        ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/EventsQueue.java:28: error: [NullAway] @NonNull field EventsQueue$Node.e not initialized
        public Event e;
                     ^
    (see http://t.uber.com/nullaway )
../original/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/logging/FileLogger.java:11: error: [NullAway] initializer method does not guarantee @NonNull field out (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public FileLogger(File f) {
           ^
    (see http://t.uber.com/nullaway )
28 errors
